# axum-htmx-askama

./: .env  Cargo.toml  README.md  docker-compose.yaml
.cargo/: config.toml
migrations/: 20240222155718_create_todo_table.down.sql  20240222155718_create_todo_table.up.sql
src/: error.rs  lib.rs  main.rs  model.rs  settings.rs
src/controller/: mod.rs
src/data/: mod.rs
src/model/: mod.rs  todo.rs
src/view/: home.rs  mod.rs  notfound.rs
src/web/: mod.rs  routes_todos.rs
templates/: 404.html  base.html  child.html  hello.html  home.html  todo-item.html  todoitem.html
