[package]
name = "axum-htmx-askama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.4", features = ["form", "macros"] }
config = "0.14.0"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
] }
dotenv = "0.15.0"
uuid = "1.7.0"
